<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

        <item
            android:id="@+id/nav_movies"
            android:icon="@drawable/ic_filmstrip_white_24dp"
            android:title="@string/nav_movies" />
        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/ic_calendar_clock_white_24dp"
            android:title="@string/nav_schedule" />
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_account_white_24dp"
            android:title="@string/nav_account" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_white_24dp"
            android:title="@string/nav_settings" />
        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/ic_information_outline_white_24dp"
            android:title="@string/nav_info" />

</menu>
