<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="informatica.groep1.bioscoopapp.presentation.LoginActivity"
    android:background="@color/colorBackground">


    <ImageView
        android:id="@+id/activityLogin_iv_logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:srcCompat="@drawable/logo_white"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <com.devspark.robototextview.widget.RobotoTextView
        android:id="@+id/activityLogin_tv_loginText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:fontFamily="roboto"
        app:textWeight="normal"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="48dp"
        android:text="@string/textview"
        android:textAllCaps="true"
        android:textColor="@color/colorWhite"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintTop_toBottomOf="@+id/activityLogin_iv_logo" />

    <com.devspark.robototextview.widget.RobotoEditText
        android:id="@+id/activityLogin_et_usernameInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/LoginHint"
        android:textColorHint="@color/colorWhiteSecondary"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/activityLogin_tv_loginText"
        app:fontFamily="roboto"
        app:textWeight="normal"/>

    <com.devspark.robototextview.widget.RobotoEditText
        android:id="@+id/activityLogin_et_passwordInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        android:hint="@string/password"
        android:textColorHint="@color/colorWhiteSecondary"
        android:textColor="@color/colorWhite"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/activityLogin_btn_login"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activityLogin_et_usernameInput"
        app:layout_constraintVertical_bias="0.0"
        app:fontFamily="roboto"
        app:textWeight="normal"/>

    <com.devspark.robototextview.widget.RobotoButton
        android:id="@+id/activityLogin_btn_login"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/textview"
        android:textSize="14sp"
        app:fontFamily="roboto"
        app:textWeight="medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>
